Docker-(not fully working)/server/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      app: server
  replicas: 1
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server-image
        image: server-image:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: server
